--- a/shop.html
+++ b/shop.html
@@ -227,7 +227,7 @@
 					<div class="single-product-item">
 						<div class="product-image">
 							<!-- <a href="single-product.html"> -->
-								<img src="assets\img\snacks imgs\karaseavu.jpg" alt=""></a>
+								<img src="assets\img\snacks imgs\Keezha_Eral_Pepper_Sev.jpg" alt=""></a>
 						</div>
 						<h3>Karaseavu</h3>
 						<p class="product-price"><span>Per Kg</span> ₹115</p>
