--- a/checkout.html
+++ b/checkout.html
@@ -214,7 +214,7 @@
 									<th>Price</th>
 								</tr>
 							</thead>
-							<tbody class="order-details-body">
+							<tbody class="order-details-body" id="orderitems">
 								<tr>
 									<td>Product</td>
 									<td>Total</td>
