--- a/shop.html
+++ b/shop.html
@@ -154,6 +154,7 @@
                     </div>
                 </div>
             </div>
+	    <ul class="product-list" id="productList">
 
 			<div class="row product-lists">
 				<div class="col-lg-4 col-md-6 text-center Sweets">
@@ -175,7 +176,7 @@
 									<img src="assets\img\sweets imgs\pori-urundai.jpg" alt=""></a> 
 							</div>
 							<h3>pori urundai</h3>
-							<p class="product-price"><span>Per pack 10 pcs</span> ₹ 25 </p>
+							<p class="product-price"><span>Per pack </span> ₹ 25 </p>
 							<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 						</div>
 					</div>
@@ -186,32 +187,32 @@
 									<img src="assets\img\sweets imgs\athurasam.jpg" alt=""></a> 
 							</div>
 							<h3>Athurasam</h3>
-							<p class="product-price"><span>Per pack 10 pcs</span> ₹ 25 </p>
+							<p class="product-price"><span>Per pack </span> ₹ 25 </p>
 							<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 						</div>
 					</div>
-					<!-- <div class="col-lg-4 col-md-6 text-center Sweets">
+					<div class="col-lg-4 col-md-6 text-center Sweets">
 						<div class="single-product-item">
 							<div class="product-image">
-								<a href="single-product.html">
+								<!-- <a href="single-product.html"> -->
 									<img src="assets\img\sweets imgs\inipu seedai.jpg" alt=""></a> 
 							</div>
 							<h3>Inipu seedai</h3>
 							<p class="product-price"><span>Per kg</span> ₹ 130 </p>
 							<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 						</div>
-					</div> -->
-					<!-- <div class="col-lg-4 col-md-6 text-center Sweets">
+					</div>
+					<div class="col-lg-4 col-md-6 text-center Sweets">
 						<div class="single-product-item">
 							<div class="product-image">
-								 <a href="single-product.html">
+								 <!-- <a href="single-product.html"> -->
 									<img src="assets\img\sweets imgs\inipu seedai.jpg" alt=""></a> 
 							</div>
 							<h3>Seeni seavu</h3>
 							<p class="product-price"><span>Per kg</span> ₹ 115</p>
 							<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 						</div>
-					</div> -->
+					</div>
 				<div class="col-lg-4 col-md-6 text-center Snacks">
 					<div class="single-product-item">
 						<div class="product-image">
@@ -245,7 +246,7 @@
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
 				</div>
-				<!-- <div class="col-lg-4 col-md-6 text-center Snacks">
+				<div class="col-lg-4 col-md-6 text-center Snacks">
 					<div class="single-product-item">
 						<div class="product-image">
 							<a href="single-product.html">
@@ -255,7 +256,7 @@
 						<p class="product-price"><span>Per pack</span> ₹23 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
-				</div> -->
+				</div>
 				<div class="col-lg-4 col-md-6 text-center Snacks">
 					<div class="single-product-item">
 						<div class="product-image">
@@ -267,39 +268,39 @@
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
 				</div>
-				<!-- <div class="col-lg-4 col-md-6 text-center Snacks">
+				<div class="col-lg-4 col-md-6 text-center Snacks">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html">
+							<!-- <a href="single-product.html"> -->
 								<img src="assets\img\snacks imgs\oma podi.jpg" alt=""></a>
 						</div>
 						<h3>Oma Podi</h3>
 						<p class="product-price"><span>Per Kg</span> ₹125 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
-				</div> -->
-				 <!-- <div class="col-lg-4 col-md-6 text-center Snacks">
+				</div>
+				 <div class="col-lg-4 col-md-6 text-center Snacks">
 					<div class="single-product-item">
 						<div class="product-image">
-							 <a href="single-product.html">
+							 <!-- <a href="single-product.html"> -->
 								<img src="assets\img\snacks imgs\karaBoodhi.jpg" alt=""></a>
 						</div>
 						<h3>Kara bhoodhi</h3>
 						<p class="product-price"><span>Per Kg</span> ₹125 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
-				</div>  -->
-				<!-- <div class="col-lg-4 col-md-6 text-center Snacks">
+				</div> 
+				<div class="col-lg-4 col-md-6 text-center Snacks">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html">
+							<!-- <a href="single-product.html"> -->
 								<img src="assets\img\snacks imgs\butter murukku.jpg" alt=""></a>
 						</div>
 						<h3>Butter murukku</h3>
 						<p class="product-price"><span>Per Kg</span> ₹130 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
-				</div> -->
+				</div>
 				<div class="col-lg-4 col-md-6 text-center Snacks">
 					<div class="single-product-item">
 						<div class="product-image">
@@ -370,20 +371,22 @@
 				
 				
 			</div>
-
-			<!-- <div class="row">
-				<div class="col-lg-12 text-center">
-					<div class="pagination-wrap">
-						<ul>
-							<li><a href="#">Prev</a></li>
-							<li><a href="#">1</a></li>
-							<li><a class="active" href="#">2</a></li>
-							<li><a href="#">3</a></li>
-							<li><a href="#">Next</a></li>
-						</ul>
-					</div>
-				</div>
-			</div> -->
+   
+		
+			 </ul>
+			<div class="row">
+    <div class="col-lg-12 text-center">
+        <div class="pagination-wrap">
+            <ul id="pagination">
+                <li><a href="#">Prev</a></li>
+                <li><a href="#" class="active">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">Next</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
 		</div>
 	</div>
 	<!-- end products -->
