--- a/cart.html
+++ b/cart.html
@@ -155,8 +155,8 @@
 									<th class="product-total">Total</th>
 								</tr>
 							</thead>
-							<tbody>
-								<tr class="table-body-row">
+							<tbody id="cartItems">
+								<!-- <tr class="table-body-row">
 									<td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
 									<td class="product-image"><img src="assets/img/products/product-img-1.jpg" alt=""></td>
 									<td class="product-name">Strawberry</td>
@@ -179,7 +179,7 @@
 									<td class="product-price">$35</td>
 									<td class="product-quantity"><input type="number" placeholder="0"></td>
 									<td class="product-total">1</td>
-								</tr>
+								</tr> -->
 							</tbody>
 						</table>
 					</div>
@@ -197,15 +197,15 @@
 							<tbody>
 								<tr class="total-data">
 									<td><strong>Subtotal: </strong></td>
-									<td>$500</td>
+									<td>₹</td>
 								</tr>
 								<tr class="total-data">
 									<td><strong>Shipping: </strong></td>
-									<td>$45</td>
+									<td>₹45</td>
 								</tr>
 								<tr class="total-data">
 									<td><strong>Total: </strong></td>
-									<td>$545</td>
+									<td>₹</td>
 								</tr>
 							</tbody>
 						</table>
