--- a/index_2.html
+++ b/index_2.html
@@ -135,7 +135,7 @@
 								<p class="subtitle">Fresh & Organic</p>
 								<h1>Delicious Seasonal Sweets</h1>
 								<div class="hero-btns">
-									<a href="shop.html" class="boxed-btn">Fruit Collection</a>
+									<a href="shop.html" class="boxed-btn">Visit Shop</a>
 									<a href="contact.html" class="bordered-btn">Contact Us</a>
 								</div>
 							</div>
